<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_bar_menu_add_task"
        android:title="@string/add_task"
        android:icon="@drawable/ic_add"
        android:orderInCategory="2"
        app:iconTint="@color/white"
        app:showAsAction="always"/>
    <item android:id="@+id/action_bar_menu_fast_forward"
...
